--- a/react-marvel/src/pages/Pesquisa/style.scss
+++ b/react-marvel/src/pages/Pesquisa/style.scss
@@ -7,9 +7,33 @@ body {
     font-family: $fonteQuadrinho;
     #pesquisa {
         background-color: $cor-quartenaria;
-        padding: 4rem;
-        display: flex;
+        padding: 2rem;
         justify-content: center;
+        align-items: center;
+
+        .heroi{
+            display: flex;
+            justify-content: center;
+            padding: 2rem;
+            #imgHeroi {
+                display: flex;
+                justify-content: center;
+                
+                height: 200px;
+                
+                box-shadow: $cor-primaria 0px 1px 8px;
+                -moz-transition: all 0.3s;
+                -webkit-transition: all 0.3s;
+                transition: all 0.3s;
+                &:hover {
+                    -moz-transform: scale(1.1);
+                    -webkit-transform: scale(1.1);
+                    transform: scale(1.1);
+                }
+                
+            }
+        }
+        
         #input {
             margin: 0 auto;
             width: 400px;
@@ -24,8 +48,9 @@ body {
                 text-align: center;
                 border: none;
                 outline: none;
-                font-size: 26px;
+                font-size: 15px;
                 font-family: $fonteDigitacao;
+                text-transform: uppercase;
             }
             &:hover, &:focus-within {
                 box-shadow: 1px 1px 8px 1px $cor-secundaria ;
@@ -33,27 +58,73 @@ body {
             }
         }
 
-        button {
-            text-transform: uppercase;
-            margin-top: .75rem;
-            outline: none;
-            height: 40px;
-            text-align: center;
-            width: 130px;
-            background-color: $cor-primaria;
-            color: white;
-            letter-spacing: 1px;
-            font-size: 12px;
-            font-weight: bold;
-            cursor: pointer;
-            border: 2px $cor-secundaria;
-            border-radius: 40px;
-            &:hover {
-                background-color: $cor-secundaria;
-                color: black;
-            }
+        #botao{
+            display: flex;
+            justify-content: center;
+            button {
+                text-transform: uppercase;
+                margin-top: .75rem;
+                outline: none;
+                height: 40px;
+                text-align: center;
+                width: 130px;
+                background-color: $cor-primaria;
+                color: white;
+                letter-spacing: 1px;
+                font-size: 12px;
+                font-weight: bold;
+                cursor: pointer;
+                border: 2px $cor-secundaria;
+                border-radius: 40px;
+                &:hover {
+                    background-color: $cor-secundaria;
+                    color: black;
+                }
+        }
+       
         }
 
     }
+    .cards {
+        margin: 0;
+        background: #1B1A17;
+        display: flex;
+        justify-content: space-evenly;
+        flex-flow: row wrap;
+        #quadrinhos {
+            
+            padding: 1rem;
+            width: 230px;
+            
+            #titulo {
+                color: $cor-ternaria;
+                display: flex;
+                text-align: center;
+                justify-content: center;
+                font-size: 15px;
+                height: 32px;
+                flex-flow: row wrap;
+                line-height: 1.25rem;
+            }
+            #card {
+                padding: 1rem;
+                #imagem {
+                    box-shadow: $cor-quartenaria 0px 1px 8px;
+                    max-width: 100%;
+                    -moz-transition: all 0.3s;
+                    -webkit-transition: all 0.3s;
+                    transition: all 0.3s;
+                    &:hover {
+                        -moz-transform: scale(1.1);
+                        -webkit-transform: scale(1.1);
+                        transform: scale(1.1);
+                    }
+                }
+            }
+            
+         }
+    }
+  
 }
+
 
