--- a/react-marvel/src/styles/abstract/_variaveis.scss
+++ b/react-marvel/src/styles/abstract/_variaveis.scss
@@ -1,9 +1,11 @@
 //Fonte
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@1&display=swap');
 
 $fonteDigitacao: 'Cormorant Garamond', serif;
 $fonteQuadrinho: 'Shadows Into Light', cursive;
+$fonteTexto: 'Roboto Mono', serif;
 
 //Cores
 
@@ -11,4 +13,6 @@ $cor-primaria: #990000;
 $cor-secundaria: #FF5B00;
 $cor-ternaria: #D4D925;
 $cor-quartenaria: #FFEE63;
+$cor-quinternaria:#1B1A17;
+
 
