--- a/react-marvel/src/pages/Home/style.scss
+++ b/react-marvel/src/pages/Home/style.scss
@@ -1,13 +1,13 @@
 @import '../../styles/abstract/_variaveis.scss';
 body {
     margin: 0;
+    background: #1B1A17 ;
 }
 
 #body {
     font-family: $fonteQuadrinho;
     #pesquisa {
         background-color: $cor-quartenaria;
-        padding: 2rem;
         justify-content: center;
         align-items: center;
 
@@ -18,9 +18,7 @@ body {
             #imgHeroi {
                 display: flex;
                 justify-content: center;
-                
                 height: 200px;
-                
                 box-shadow: $cor-primaria 0px 1px 8px;
                 -moz-transition: all 0.3s;
                 -webkit-transition: all 0.3s;
@@ -35,8 +33,9 @@ body {
         }
         
         #input {
+            
             margin: 0 auto;
-            width: 400px;
+            max-width: 400px;
             background: white;
             border-radius: 20px;
             border: 4px solid white;
@@ -57,33 +56,11 @@ body {
                 outline: none;
             }
         }
-
-        #botao{
-            display: flex;
-            justify-content: center;
-            button {
-                text-transform: uppercase;
-                margin-top: .75rem;
-                outline: none;
-                height: 40px;
-                text-align: center;
-                width: 130px;
-                background-color: $cor-primaria;
-                color: white;
-                letter-spacing: 1px;
-                font-size: 12px;
-                font-weight: bold;
-                cursor: pointer;
-                border: 2px $cor-secundaria;
-                border-radius: 40px;
-                &:hover {
-                    background-color: $cor-secundaria;
-                    color: black;
-                }
-        }
-       
-        }
-
+    }
+    .botaoAchar {
+        display: flex;
+        justify-content: center;
+        padding: 1rem;
     }
     .cards {
         margin: 0;
@@ -127,4 +104,11 @@ body {
   
 }
 
+@media screen and (max-width:450px) {
+    #input {
+        display: flex;
+        width: auto;
+       
+    }
+}
 
